test/compile-fail/resolution/use/crate-name-from-mod/expected.txt
error[E0425]: unresolved item `a`
  ┌─ ./test/compile-fail/resolution/use/crate-name-from-mod/top.rhdl:2:16
  │
2 │     use crate::a;
  │                ^ no `a` item in `crate`

